--- a/PartyMasterBackend/pom.xml
+++ b/PartyMasterBackend/pom.xml
@@ -68,6 +68,11 @@
       <artifactId>json</artifactId>
       <version>20240303</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
