--- a/PartyMasterBackend/src/main/resources/application.properties
+++ b/PartyMasterBackend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=PartyMasterBackend
 spring.datasource.url=jdbc:mariadb://localhost:3306/jeuxsociete
-spring.datasource.password=1234
+spring.datasource.password=
 spring.datasource.username=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
